--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
     Theme Name: Twilight City
     Theme URL: https://github.com/Hodokami/twilight_city
     Description: Neira Lite is a clean and minimalist theme that allows your reader to focus on your content. It features modern, easy-to-read typography and minimalistic design. Built with Bootstrap framework which is perfect look on any device. Neira Lite offers additional two custom widget i.e. About and Latest Posts and including changing the color scheme. The theme options are powered by Customizer. You can check out the demo at https://volthemes.com/demo/?theme=neira-lite
-	Version: 1.8.3
+	Version: 0.1
 
     Author: Hodokami
     Author URI: https://tellaresdo.com/
 
-	License: GNU General Public License v2 or later
-	License URI: http://www.gnu.org/licenses/gpl-2.0.html
+	License: GNU Lesser General Public License v3.0 or later
+	License URI: https://www.gnu.org/licenses/lgpl-3.0.html
 
 	Text Domain: twilight_city
 	Domain Path: /languages/
